cluster/components/shared-lb/templates/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: intermidiate-ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 3030
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: argocd.local
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-local-tls
    - name: https
      hostname: argocd.local
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-local-tls
    - name: https
      hostname: zot.local
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: zot-local-tls
